Update configuration files to support Capacitor integration and add new site configuration
- Updated `config.xml` to include original source and allow navigation to a local server.
- Modified `ionic.config.json` to add Capacitor integration.
- Added a new site configuration in `moodle.config.json` for "Inspire LMS".
- Updated `package.json` and `package-lock.json` to include Capacitor dependencies.
- Changed the `ionic:serve` script in `package.json` to use `bash` instead of `cross-env-shell`.
- Updated `serve.sh` to ensure Gradle is in the PATH for Cordova builds.

--- a/moodle.config.json
+++ b/moodle.config.json
@@ -87,7 +87,13 @@
         "high": 120
     },
     "customurlscheme": "moodlemobile",
-    "sites": [],
+    "sites": [
+        {
+            "name": "Inspire LMS",
+            "url": "https://inspirelms.sawtraxltd.com",
+            "alias": "Inspire LMS"
+        }
+    ],
     "multisitesdisplay": "",
     "sitefindersettings": {},
     "onlyallowlistedsites": false,
