--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "test:coverage": "NODE_ENV=testing gulp && jest --coverage",
         "lint": "NODE_OPTIONS=--max-old-space-size=8192 ng lint",
         "ionic:serve:before": "gulp",
-        "ionic:serve": "cross-env-shell ./scripts/serve.sh",
+        "ionic:serve": "bash ./scripts/serve.sh",
         "ionic:build:before": "gulp",
         "postinstall": "patch-package && cd cordova-plugin-moodleapp && npm install",
         "lang:update-langpacks": "./scripts/update_langpacks.sh",
@@ -71,6 +71,12 @@
         "@awesome-cordova-plugins/sqlite": "8.1.0",
         "@awesome-cordova-plugins/status-bar": "8.1.0",
         "@awesome-cordova-plugins/web-intent": "8.1.0",
+        "@capacitor/android": "8.0.0",
+        "@capacitor/app": "8.0.0",
+        "@capacitor/core": "8.0.0",
+        "@capacitor/haptics": "8.0.0",
+        "@capacitor/keyboard": "8.0.0",
+        "@capacitor/status-bar": "8.0.0",
         "@ionic/angular": "8.7.5",
         "@ionic/cordova-builders": "12.3.0",
         "@moodlehq/cordova-plugin-advanced-http": "3.3.1-moodle.1",
@@ -133,6 +139,7 @@
         "@angular/cli": "20.3.3",
         "@angular/compiler-cli": "20.3.2",
         "@angular/language-service": "20.3.2",
+        "@capacitor/cli": "8.0.0",
         "@eslint/js": "9.36.0",
         "@faker-js/faker": "9.9.0",
         "@ionic/angular-toolkit": "12.3.0",
